
- Updated banner description in FAQs in help modal

- Unlock notifications aren't pluralized any more ("unlocked volume" instead of "volumes", same for fullscreen)

- Added tooltip to help modal mentioning players can drag to change the transaction priority for banks

- Update signin and signup loader aesthetic

==== Bug Fixes ====

- Fixed bug where players could not sell empty aquariums and were told the aquariums were full

- Fixed regex bug where medium and big fish would display that they eat food beside fish icon in info pannel

- Fixed bug where bank buy/sell toggle switch label wouldn't update

==== Settings ====

- Added setting to toggle display of aquarium. Defaults to on.

- Added setting to limit bank inputs by number of banks. Defaults to on.

- Added volume sliders for background and effects volumes. Default to 50%.

- Settings now save bank inputs

- Added forwards compatability for previous data such that newly added settings default correctly when importing data

==== Save Data ====

- Keeps current settings for paused and volume when importing save data

- Save data just before signout

- Save data every 3min (changed from every 1min)

================
0.0.3 - Minor Fixes
================

==== Visual ====

- Renamed "background" volume to "music" volume in settings

- Fixed indentation in settings

- "Fullscreen Aquarium" now also enters fullscreen mode, and exiting remembers if the user was previously in fullscreen and restores that state

- "Fullscreen Aquarium" displays aquarium correctly even if "display aquarium" is turned off in settings

- Settings are hidden if relevant unlock has not been unlocked (currently volume and banks)

- Added a loading page display with spinning icon during page load

- Added aquarium descriptions: "majestic", "immeasurable", "awesome", "extreme", "boisterous", "loud"

==== Bug Fixes ====

- Now saves if bank inputs were set to buy or sell