@@ -325,7 +325,7 @@ span.highlight {
 }
 .btn.highlight {
 	background-color: hsl(205, 90%, 60%);
-	color: #fff;	
+	color: #fff;
 }
 
 .text-muted {
