@@ -108,110 +108,6 @@ Perfect
 Infinite`.split('\n'),
 };
 
-/* Old words:
-Lonely
-Microscopic
-Pathetic
-Miniscule
-Sad
-Horrendous
-Despicable
-Puny
-Disgusting
-Awful
-Barren
-Unpopulated
-Boring
-Bland
-Uninteresting
-Poor
-Dissatisfactory
-Cramped
-Small
-Tiny
-Little
-Beginner
-Entry
-Pleasant
-Novice
-Lovely
-Quaint
-Peaceful
-Nice
-Cozy
-Comfortable
-Faithful
-Reliable
-Medium
-Average
-Normal
-Ordinary
-Mediocre
-Usual
-Fair
-Satisfactory
-Decent
-Uncomfortable
-Cluttered
-Special
-Different
-Unique
-Sparkling
-Pretty
-Gorgeous
-Beautiful
-Splendid
-Good
-Lively
-Interesting
-Busy
-Populated
-Active
-Bustling
-Advanced
-Professional
-Elite
-Great
-Big
-Large
-Hefty
-Mega
-Huge
-Amazing
-Quality
-Expansive
-Superior
-Vast
-Ultra
-Masterful
-Splendid
-Fantastic
-Wonderful
-Spectacular
-Fabulous
-Massive
-Gigantic
-Ginormous
-Tremendous
-Outrageous
-Outstanding
-Incredible
-Extraordinary
-Enormous
-Monumentous
-Astonishing
-Astounding
-Phenomenal
-Incomprehensible
-Unfathomable
-Unimaginable
-Unthinkable
-Astronomical
-Complete
-Perfect
-Infinite
-*/
-
 // powers of 2, number of fish
 function getDescription(num_item, item) {
 	if(item == 'aquarium' && num_item == 0) return 'an empty aquarium';
